tests/dataset/tpc-ds/compiler/rust/q38.error
rustc: exit status 1
warning: type `Store_sale` should have an upper camel case name
  --> /tmp/q38.rs:10:8
   |
10 | struct Store_sale {
   |        ^^^^^^^^^^ help: convert the identifier to upper camel case: `StoreSale`
   |
   = note: `#[warn(non_camel_case_types)]` on by default

warning: type `Catalog_sale` should have an upper camel case name
  --> /tmp/q38.rs:16:8
   |
16 | struct Catalog_sale {
   |        ^^^^^^^^^^^^ help: convert the identifier to upper camel case: `CatalogSale`

warning: type `Web_sale` should have an upper camel case name
  --> /tmp/q38.rs:22:8
   |
22 | struct Web_sale {
   |        ^^^^^^^^ help: convert the identifier to upper camel case: `WebSale`

error[E0425]: cannot find function `contains` in this scope
  --> /tmp/q38.rs:50:17
   |
50 |             if !contains(out, x) {
   |                 ^^^^^^^^ not found in this scope
   |
help: use the `.` operator to call the method `contains` on `&[_]`
   |
50 -             if !contains(out, x) {
50 +             if !out.contains(x) {
   |

warning: unused variable: `customer`
  --> /tmp/q38.rs:43:9
   |
43 |     let customer = vec![Customer { c_customer_sk: 1, c_last_name: "Smith", c_first_name: "John" }, Customer { c_customer_sk: 2, c_last_na...
   |         ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_customer`
   |
   = note: `#[warn(unused_variables)]` on by default

error: aborting due to 1 previous error; 4 warnings emitted

For more information about this error, try `rustc --explain E0425`.
